--- a/dev_addons/academic_management/views/academic_management_views.xml
+++ b/dev_addons/academic_management/views/academic_management_views.xml
@@ -24,6 +24,16 @@
             <menuitem name="Alumnos" id="academic_management.students"
                 parent="academic_management.student_management"
                 action="academic_management.action_student" />
+
+
+        <menuitem name="Gestion de Año y Periodo" id="academic_management.management_management" 
+            parent="academic_management.menu_root"/>
+            <menuitem name="Año Academico" id="academic_management.management"
+                parent="academic_management.management_management"
+                action="academic_management.action_management" />
+|            <menuitem name="Periodo" id="academic_management.periods"
+                parent="academic_management.management_management"
+                action="academic_management.action_periods" />
                 
     </data>
 </odoo>
