gestion de ciclos y paralelos v2

--- a/dev_addons/academic_management/views/cycle_views.xml
+++ b/dev_addons/academic_management/views/cycle_views.xml
@@ -28,6 +28,11 @@
                             <field name="state"/>
                             <field name="company_id"/>
                         </group>
+                        <notebook>
+                            <page string = "Cursos" name="grade">
+                                <field name="grade_ids"></field>
+                            </page>
+                        </notebook>
                     </sheet>
                 </form>
             </field>
