--- a/dev_addons/academic_management/views/parallel_views.xml
+++ b/dev_addons/academic_management/views/parallel_views.xml
@@ -20,6 +20,11 @@
                         <group>
                             <field name="name"/>
                         </group>
+                        <notebook>
+                            <page string = "Cursos" name="grade">
+                                <field name="grade_ids"></field>
+                            </page>
+                        </notebook>
                     </sheet>
                 </form>
             </field>
