--- a/dev_addons/academic_management/views/management_views.xml
+++ b/dev_addons/academic_management/views/management_views.xml
@@ -31,15 +31,46 @@
                     <sheet>
                         <group>
                             <group>
-                                <field name="year" readonly="state == 'done'" />
-                                <field name="description"  readonly="state == 'done'"/>
+                                <field name="year"  />
+                                <field name="description" />
                             </group>
                             <group>
-                                <field name="date_start" readonly="state == 'done'"/>
-                                <field name="date_end"  readonly="state == 'done'"/>
+                                <field name="date_start" />
+                                <field name="date_end"  />
 
                             </group>
                         </group>
+                        <notebook>
+                            <page string="Periodos" name="period" >
+                                <!-- campo period y no mostrar el campo gestion -->
+                                <field name="period_ids">
+                                    <tree string="Periods"  >
+                                        <field name="number" />
+                                        <field name="type_period" />
+                                        <field name="date_start" />
+                                        <field name="date_end" />
+                                        <field name="state" widget="badge" 
+                                            options='{"draft": {"class": "badge-blue"}, "in_progress": { "class": "badge-blue"}, "done" : {"class":"badge-blue" }}'/>
+                                            
+                                    </tree>
+                                    <form >
+                                        <group>
+                                            <group>
+                                                <field name="number" />
+                                                <field name="type_period"/>
+                                                <field name="date_start"/>
+                                                <field name="date_end"/>
+                                            </group>
+                                        </group>
+                                    </form>
+
+                                </field>
+                                
+                                
+                            </page>
+                          
+                            
+                        </notebook>
                     </sheet>
                 </form>
             </field>
