--- a/dev_addons/academic_management/views/period_views.xml
+++ b/dev_addons/academic_management/views/period_views.xml
@@ -34,14 +34,16 @@
                     <sheet>
                         <group>
                             <group>
-                                <field name="number" readonly="state == 'done'"/>
-                                <field name="type_period" readonly="state == 'done'"/>
-                                <field name="description" readonly="state == 'done'"/>
+<!--                                 <field name="number" readonly="state == 'done'"/>
+ -->                            
+                                <field name="number" />    
+                                <field name="type_period" />
+                                <field name="description" />
                             </group>
                             <group>
-                                <field name="date_start" readonly="state == 'done'"/>
-                                <field name="date_end" readonly="state == 'done'"/>
-                                <field name="management_id" readonly="state == 'done'" />
+                                <field name="date_start" />
+                                <field name="date_end" />
+                                <field name="management_id"  />
                                 
                             </group>
                         </group>
