--- a/dev_addons/academic_management/views/period_views.xml
+++ b/dev_addons/academic_management/views/period_views.xml
@@ -36,14 +36,14 @@
                             <group>
 <!--                                 <field name="number" readonly="state == 'done'"/>
  -->                            
-                                <field name="number" />    
-                                <field name="type_period" />
-                                <field name="description" />
+                                <field name="number" readonly="state == 'done'"/>    
+                                <field name="type_period" readonly="state == 'done'"/>
+                                <field name="description" readonly="state == 'done'"/>
                             </group>
                             <group>
-                                <field name="date_start" />
-                                <field name="date_end" />
-                                <field name="management_id"  />
+                                <field name="date_start" readonly="state == 'done'"/>
+                                <field name="date_end" readonly="state == 'done'"/>
+                                <field name="management_id" readonly="state == 'done'" options="{'no_create': True, 'no_open': True}" domain="[('state', '=', 'in_progress')]"/>
                                 
                             </group>
                         </group>
