--- a/dev_addons/academic_management/views/schedule_views.xml
+++ b/dev_addons/academic_management/views/schedule_views.xml
@@ -12,7 +12,7 @@
                     <field name="subject_id"/>
                     <field name="teacher_id"/>
                     <field name="classroom_id"/>
-                    <field name="grade_id"/>
+                    <field name="grade_id" />
                 </tree>
             </field>
         </record>
@@ -28,12 +28,12 @@
                                 <field name="start_time" widget="timepicker"/>
                                 <field name="end_time" widget="timepicker"/>
                                 <field name="day"/>
-                                <field name="subject_id"/>
+                                <field name="subject_id" options="{'no_create': True, 'no_open': True}"/>
                             </group>
                             <group>
-                                <field name="classroom_id"/>
-                                <field name="grade_id"/>
-                                <field name="teacher_id" />
+                                <field name="classroom_id" options="{'no_create': True, 'no_open': True}"/>
+                                <field name="grade_id" options="{'no_create': True, 'no_open': True}"/>
+                                <field name="teacher_id" options="{'no_create': True, 'no_open': True}"/>
                             </group>
                         </group>
                     </sheet>
